--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -69,10 +69,11 @@
    Author profile and links
    ========================================================================== */
 
+(min-width: 80em)
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 60px;
+  width: 36px;
   // set width only, for non-square avatars
   // height: 36px;
 
