--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -36,6 +36,6 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
 
-<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/custom.css?v=1.0' | relative_url }}">
 
 <!-- end custom head snippets -->
