--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,9 +1,13 @@
 /* Resize profile picture in sidebar */
 .author__avatar {
-  width: 300px !important;
-  height: auto !important; /* keeps the aspect ratio */
-  border-radius: 10px;     /* just soft rounded corners */
+  width: 300px !important; /* Adjust the width as desired */
+  height: auto !important; /* Maintain aspect ratio */
+  border-radius: 10px;     /* Optional: Adjust for rounded corners */
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.sidebar {
+  width: 320px; /* Adjust this value as needed */
 }
