--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,8 @@
 /* Resize profile picture in sidebar */
 .author__avatar {
-  width: 300px !important; /* Adjust the width as desired */
+  width: 300px !important; /* Set your desired width */
   height: auto !important; /* Maintain aspect ratio */
-  border-radius: 10px;     /* Optional: Adjust for rounded corners */
+  border-radius: 0; /* Ensure the image remains square */
   display: block;
   margin-left: auto;
   margin-right: auto;
