--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,13 +9,14 @@
 }
 
 
-/* Make sidebar wider */
-.sidebar {
-  width: 280px;
-  flex-shrink: 0;
-}
+/* Make sidebar wider, but only on larger screens */
+@media (min-width: 768px) {
+  .sidebar {
+    width: 280px;
+    flex-shrink: 0;
+  }
 
-/* Let main content adapt to new sidebar width */
-.main {
-  margin-left: 280px;
+  .main {
+    margin-left: 280px;
+  }
 }
